devops/00.container/03.vuejs/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk000-myfirst-frontend
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk000-myfirst-frontend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: b297e28c
      labels:
        app: sk000-myfirst-frontend
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-frontend
        image: amdp-registry.skala-ai.com/skala25a/sk000-myfirst-frontend:1.0.0
        imagePullPolicy: Always
