devops/00.container/03.vuejs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk000-myfirst-frontend
  namespace: skala-practice
spec:
  selector:
    app: sk000-myfirst-frontend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
